better fix for jumping legend tree panel

--- a/src/classic/sass/src/view/panel/RoutingLegendTree.scss
+++ b/src/classic/sass/src/view/panel/RoutingLegendTree.scss
@@ -22,4 +22,6 @@
 
 .basigx-legend-panel .x-tree-node-text {
     white-space: normal;
+    word-break: break-all;
+    display: inline-block;
 }
